changed dashes to underscores as per: https://docs.puppetlabs.com/puppetdb/3.0/api/query/v4/upgrading-from-v3.html

--- a/app/config.js.example
+++ b/app/config.js.example
@@ -27,7 +27,7 @@ DASHBOARD_PANELS = [
   {
     name: 'Unresponsive nodes',
     type: 'danger',
-    query: '#node.report-timestamp < @"now - 2 hours"'
+    query: '#node.report_timestamp < @"now - 2 hours"'
   },
   {
     name: 'Nodes in production env',
